rust/schema/tests/snapshots/merge__change-code-chunk-code-and-lang.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: CodeChunk
      code: 1 + 2
      programmingLanguage: python
new:
  type: Article
  content:
    - type: CodeChunk
      code: 1 + 3
      programmingLanguage: r
ops:
  - - - content
      - 0
      - code
    - Set: 1 + 3
  - - - content
      - 0
      - programmingLanguage
    - Set: r
