rust/schema/tests/snapshots/merge__delete-code-chunk.snap
---
source: rust/schema/tests/merge.rs
expression: "Fixture { old, new, ops }"
---
old:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: CodeChunk
      code: 1 + 2
      programmingLanguage: python
    - type: Paragraph
      content:
        - type: Text
          value: para2
new:
  type: Article
  content:
    - type: Paragraph
      content:
        - type: Text
          value: para1
    - type: Paragraph
      content:
        - type: Text
          value: para2
ops:
  - - - content
    - Remove:
        - 1
